# anki-tutor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
anki_tutor/: exceptions.py  main.py
anki_tutor/db/: __init__.py  dbclient.py
anki_tutor/llm/: __init__.py  helper.py  sr.py  stt.py
